Endpoint healths checked in compliance with frontend
